# shrt

./: Cargo.toml  LICENSE  Readme.md  install.ps1  install.sh
.github/workflows/: release.yml  test-install.yml
src/: main.rs
