[package]
name = "shrt"
version = "0.1.0"
edition = "2021"
description = "A simple command runner that executes predefined command sequences"
license = "MIT"
repository = "https://github.com/ozx1/shrt"
keywords = ["cli", "command", "runner", "automation"]
readme = "README.md"

[dependencies]
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.6"
open = "5.0"